syntax = "proto3";
package  lenses.streamreactor.example.alien;
option csharp_namespace = "lenses.streamreactor.example.alien";
option java_package = "io.lenses.streamreactor.example.alien";
option java_multiple_files = true;
message AddressedPerson {
   string name = 1;
   int32 id = 2;
   string email = 3;
}