syntax = "proto3";
package  lenses.streamreactor.example;
option csharp_namespace = "lenses.streamreactor.example";
option java_package = "io.lenses.streamreactor.example";
option java_multiple_files = true;
message NonAddressedPerson {
   string name = 1;
   int32 id = 2;
   string email = 3;
}