syntax = "proto3";
package  lenses.streamreactor.example;
option csharp_namespace = "lenses.streamreactor.example";
option java_package = "io.lenses.streamreactor.example";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message TimedPerson {
   string name = 1;
   int32 id = 2;
   google.protobuf.Timestamp timestamp = 3;
}